--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             <!--Project 6-->
             <a href="#" class="work_piece">
-                <img src="images/img6.jpg" alt="My sixth project" class="workpiece_img">
+                <img src="images/api8.jpg" alt="My sixth project" class="workpiece_img">
             </a>
         </div>
     </section>
